# rust-stm32mp1

./: .envrc  .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
blinky/: Cargo.toml  build.rs  stm32mp15xx_m4.ld
blinky/src/: hal.rs  main.rs
cpp/: .envrc  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.rs
threadx-sys/: Cargo.toml  build.rs
