[package]
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "rust-stm32mp1"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = { version = "0.7.3", features = ["set-sp"] }
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"
stm32mp1 = { version = "0.15.1", features = ["stm32mp157", "rt"] }

[profile.release]
# better optimizations
codegen-units = 1
lto = true

# symbols are nice and they don't increase the size on Flash
debug = true
