[package]
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
byte-strings = "0.3.1"
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp"] }
cortex-m-semihosting = "0.3.3"
critical-section = "1.1.3"
panic-semihosting = "0.6.0"
static_cell = "2.1.0"
stm32mp1 = { version = "0.15.1", features = ["stm32mp157", "rt"] }
threadx-sys = { path = "../threadx-sys" }

[build-dependencies]
anyhow = "1.0.89"
bytes = "1.7.1"
cc = "1.1.20"
flate2 = "1.0.33"
reqwest = { version = "0.12.7", features = ["blocking"] }
tar = "0.4.41"

[profile.release]
# better optimizations
codegen-units = 1
lto = true

# symbols are nice and they don't increase the size on Flash
debug = true
